# gillilab-starter

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  rupi1.txt
.claude/commands/: decompose-issues.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: task.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/routers/: tasks.py
docs/: copilot-astronvim-guide.md  gh-guide.md  gh-pr-guide.md
docs/superpowers/plans/: 2026-07-05-decompose-issues-command.md  2026-07-05-dev-local-script.md  2026-07-05-local-hmr-docker-compose.md
docs/superpowers/specs/: 2026-07-05-decompose-issues-command-design.md  2026-07-05-dev-local-script-design.md  2026-07-05-local-hmr-docker-compose-design.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/src/app/: page.tsx
scripts/: dev-local.sh
