[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.48.0",
]
